fondo y principio react

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
-body {
+.fondo {
   background-image: url("https://images.sftcdn.net/images/t_app-cover-l,f_auto/p/bccf010c-96bf-11e6-a78f-00163ed833e7/3941233754/virtualdj-18_gridview3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100vh;
+  opacity: 0.5;
 }
 .navbar {
   text-align: center;
