--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 .fondo {
-  background-image: url("https://images.sftcdn.net/images/t_app-cover-l,f_auto/p/bccf010c-96bf-11e6-a78f-00163ed833e7/3941233754/virtualdj-18_gridview3.jpg");
+  background-image: linear-gradient(rgba(255, 255, 255, 0.514), rgba(255, 255, 255, 0.479)), url("img/fondo.png");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
-  opacity: 0.5;
+  
 }
 .navbar {
   text-align: center;
