--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,56 @@
-.fondo {
+.prueba {
   background-image: linear-gradient(rgba(255, 255, 255, 0.514), rgba(255, 255, 255, 0.479)), url("img/fondo.png");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
-  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 520px;
+  max-height: 100%;
 }
-.navbar {
-  text-align: center;
+/*.pruebados {
+  height: 100vh;
+}*/
+.titulo {
+  text-align: center !important;
   justify-content: center;
 }
+h1 {
+  margin: 30px 0 30px 600px;
+  text-align: center;
+}
+form {
+  width: 300px;
+  margin-left: 300px;
+}
+
 .footer {
   background-color: rgba(0, 0, 0, 0.2);
+  bottom: 0;
+  width: 100%;
+}
+form.card{
+  border: none;
+}
+
+.letra {
+  white-space: pre-wrap;
+}
+.test {
+  max-height: 100%;
+}
+.card img {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+h2 {
+  margin-bottom: 1rem;
+  font-family: 'Work Sans', sans-serif; 
+  padding-bottom:10px;
+  margin-top: 3rem;
+  text-align: end;
+}
+
+.card-body i {
+  font-size: 3rem;
+  margin-right: 3rem;
 }
